Fix problem with swipebox bottom bar not visible

--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -2637,8 +2637,8 @@ a#swipebox-close {
 }
 
 #swipebox-bottom-bar {
-  padding: 0.6rem 0;
-  height: 70px;
+  // padding: 0.6rem 0;
+  // height: 70px;
 }
 
   // a#swipebox-prev {
